--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .btn {
-    @apply rounded px-5 py-1.5 text-center text-base text-gray-800;
+    @apply rounded px-4 py-1.5 text-center text-base text-gray-800;
 
     &-primary {
       @apply bg-primary-700 text-white dark:bg-primary-800;
@@ -15,7 +15,7 @@
     }
 
     &-lg {
-      @apply rounded-lg px-6 py-2.5 text-lg font-semibold;
+      @apply rounded-md px-6 py-2;
     }
   }
 
@@ -47,18 +47,18 @@
 }
 
 .rc-slider-rail {
-  @apply absolute h-2 w-full rounded bg-primary-200 dark:bg-slate-400;
+  @apply absolute h-1.5 w-full rounded bg-slate-300 dark:bg-slate-400;
 }
 
 .rc-slider-track {
-  @apply absolute h-2 rounded bg-primary-500 dark:bg-primary-800;
+  @apply absolute h-1.5 rounded bg-primary-500;
 }
 
 .rc-slider-handle {
-  @apply absolute h-6 w-6 cursor-grab touch-pan-x rounded-full border-2 border-primary-500 bg-white md:h-4 md:w-4;
+  @apply absolute h-3.5 w-3.5 cursor-grab touch-pan-x rounded-full bg-primary-500;
 
   &:hover {
-    @apply border-primary-400;
+    @apply bg-primary-400;
   }
 
   &:focus {
@@ -66,7 +66,7 @@
   }
 
   &:active {
-    @apply ring-8 ring-primary-500 ring-opacity-50;
+    @apply ring-8 ring-primary-400 ring-opacity-50;
   }
 }
 
@@ -78,8 +78,12 @@
   @apply absolute inline-block cursor-pointer text-center text-slate-500;
 }
 
-.rc-slider-mark-text-active {
-  @apply text-slate-900 dark:text-slate-200;
+.rc-slider-dot {
+  @apply absolute -mt-1 h-2 w-2 rounded-full border border-slate-400 bg-white;
+}
+
+.rc-slider-dot-active {
+  @apply border-primary-500;
 }
 
 @layer utilities {
